--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "react-bootstrap": "^2.10.2",
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
